--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/omarvalsam/Note-Taker/issues"
   },
-  "homepage": "https://github.com/omarvalsam/Note-Taker#readme"
+  "homepage": "https://github.com/omarvalsam/Note-Taker#readme",
+  "dependencies": {
+    "express": "^4.17.2"
+  }
 }
