--- a/package.json
+++ b/package.json
@@ -1,23 +1,14 @@
 {
   "name": "note-taker",
   "version": "1.0.0",
-  "description": "## AS A small business owner",
+  "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/omarvalsam/Note-Taker.git"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/omarvalsam/Note-Taker/issues"
-  },
-  "homepage": "https://github.com/omarvalsam/Note-Taker#readme",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.16.4"
   }
 }
